# 1Khour_LLVM

./: .gitignore  Readme.md  build.sh
Kaleidoscope_tutorial/: CMakeLists.txt  ast.h  build.sh  main.cpp  readme.md
Kaleidoscope_tutorial/test/: kal.ll  main.cpp  test.sh
clang-tidy_test/: test.cpp  usage_note.md
clang-tidy_test/perf/: perf.cpp  perf_cache.cpp  perf_case.cpp  perf_const_param.cpp
clang_libtooling_example/: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp
clang_libtooling_example/include/: CountFuncName.h  SimpleCFGAction.h
clang_libtooling_example/lib/: CMakeLists.txt  SimpleCFGAction.cpp
clang_libtooling_example/test/: case.cpp  case.h
doc/: Readme.md
test_pgo/: build_instr_clang.sh  build_pgo_clang.sh  pgo_clang.md
test_pgo/project/: CMakeLists.txt  build_clang_20.sh  build_clang_instr.sh  build_clang_pgo.sh  build_system.sh
test_pgo/project/include/: module.h
test_pgo/project/src/: main.cpp  module_01.cpp  module_02.cpp  module_03.cpp  module_04.cpp  module_05.cpp  module_06.cpp  module_07.cpp  module_08.cpp  module_09.cpp  module_10.cpp  module_11.cpp  module_12.cpp
